<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.siganiv.receiver.MainActivity"
    android:weightSum="1">

    <EditText
        android:id="@+id/portButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="5"
        android:hint="@string/port" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/start"
        android:onClick="onClickStart"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/archive"
        android:id="@+id/archiveButton"
        android:onClick="onClickArchive"/>

    <TextView
        android:id="@+id/recv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Tools" />

    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/graph" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/hide1"
            android:textOff="@string/show1"
            android:id="@+id/toggleButton"
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="onClickToggle1"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/hide2"
            android:textOff="@string/show2"
            android:id="@+id/toggleButton2"
            android:layout_row="0"
            android:layout_column="5"
            android:onClick="onClickToggle2"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/hideAverage"
            android:textOff="@string/showAverage"
            android:id="@+id/averageButton"
            android:layout_row="2"
            android:layout_column="4"
            android:onClick="onClickAverage"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/hide3"
            android:textOff="@string/show3"
            android:id="@+id/toggleButton3"
            android:layout_row="3"
            android:layout_column="0"
            android:onClick="onClickToggle3"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/hide4"
            android:textOff="@string/show4"
            android:id="@+id/toggleButton4"
            android:layout_row="3"
            android:layout_column="5"
            android:onClick="onClickToggle4"/>
    </GridLayout>

</LinearLayout>
